# pypackagetest

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: demo.ipynb
riskparity/: __init__.py  _core.py
tests/: test_riskparity.py
