[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "riskparity"
version = "0.1.0"
description = "Risk parity portfolio via the improved CCD method (Choi & Chen, 2022)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jaehyuk Choi", email = "jc6569@columbia.edu" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
keywords = ["risk parity", "portfolio optimization", "equal risk contribution", "CCD"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/jaehyukchoi/pypackagetest"
Repository = "https://github.com/jaehyukchoi/pypackagetest"
Issues = "https://github.com/jaehyukchoi/pypackagetest/issues"

[project.optional-dependencies]
test = ["pytest", "scipy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["riskparity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
